--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./Resources/styles.css">
+    <link rel="stylesheet" href="./resources/styles.css">
   </head>
 
   <body>
