--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
       <img src="./resources/images/logotipo.png" alt="logo" width="414px" height="436">
     </header>
 
+    <!-- Contacto -->
+
     <section class="contacto">
       <div class="contacto-container">
-        <div class="contacto-container-2">
+        <div class="contacto-container-1">
           <h3>Teléfono:</h3>
         </div>
         <div class="contacto-container-2">
@@ -30,7 +32,7 @@
         </div>
       </div>
       <div class="contacto-container">
-        <div class="contacto-container-2">
+        <div class="contacto-container-1">
           <h3>Donde estamos:</h3>
         </div>
         <div class="contacto-container-2">
@@ -40,13 +42,15 @@
       </div>
     </section>
 
+    <!-- Arroces -->
+
     <section class="arroces">
       <h2>Nuestros Arroces para llevar y pedir a domicilio:</h2>
       <div class="arroz-container">
         <div class="arroz-description">
           <h3>Paella Valenciana</h3>
         </div>
-        <div>
+        <div class="arroz-img">
           <img src="./resources/images/Arroces/Arroz a banda.jpg">
         </div>
       </div>
@@ -54,7 +58,7 @@
         <div class="arroz-description">
           <h3>Arroz de Carabineros</h3>
         </div>
-        <div>
+        <div class="arroz-img">
           <img src="./resources/images/Arroces/Arroz de carabineros.jpg">
         </div>
       </div>
@@ -62,7 +66,7 @@
         <div class="arroz-description">
           <h3>Arroz de Cigalas y Ajetes</h3>
         </div>
-        <div>
+        <div class="arroz-img">
           <img src="./resources/images/Arroces/Arroz de cigalas y ajetes.jpg">
         </div>
       </div>
@@ -70,7 +74,7 @@
         <div class="arroz-description">
           <h3>Arroz de Pulpo y Espinacas</h3>
         </div>
-        <div>
+        <div class="arroz-img">
           <img src="./resources/images/Arroces/Arroz de pulpo y espinacas.jpg">
         </div>
       </div>
@@ -78,7 +82,7 @@
         <div class="arroz-description">
           <h3>Arroz Negro</h3>
         </div>
-        <div>
+        <div class="arroz-img">
           <img src="./resources/images/Arroces/Arroz negro.jpg">
         </div>
       </div>
@@ -86,7 +90,7 @@
         <div class="arroz-description">
           <h3>Paella de Verduras</h3>
         </div>
-        <div>
+        <div class="arroz-img">
           <img src="./resources/images/Arroces/Paella de verduras.jpg">
         </div>
       </div>
