--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Arroces -->
 
     <section class="arroces">
-      <h2>Nuestros Arroces para llevar y pedir a domicilio:</h2>
+      <h2>Nuestros Arroces:</h2>
       <div class="arroz-container">
         <div class="arroz-description">
           <h3>Paella Valenciana</h3>
