--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <body>
 
-    <!-- Header -->
+    <!-- Hero -->
 
-    <header class="hero">
+    <header>
       <div class="title">
           <h1>ARROCES GOURMET LAS ROZAS</h1>
           <p>-Para llevar y pedir a domicilio-</p>
